--- a/AdminProductos.html
+++ b/AdminProductos.html
@@ -86,7 +86,9 @@
             <p>&copy; 2024 Panel de Administración. Todos los derechos reservados.</p>
         </footer>
     </div>
-
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="admin.js"></script>
+    
 </body>
 </html>
