--- a/carrito.html
+++ b/carrito.html
@@ -1,76 +1,82 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrito de Compras - Lo quieres, te lo vendo</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Carrito de Compras - Lo quieres, te lo vendo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container-fluid">
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-                <div class="container">
-                    <a class="navbar-brand" href="index.html">
-                        <img src="img/logo act1.2 fullstak II.png" alt="Logotipo" width="120" height="96">
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav ms-auto">
-                            <a class="nav-link" href="index.html">Inicio</a>
-                            <a class="nav-link" href="productos.html">Productos</a>
-                            <a class="nav-link" href="contacto.html">Contacto</a>
-                            <a class="nav-link" href="juguetes.html">Juguetes</a>
-                            <a class="nav-link" href="ropa.html">Ropa</a>
-                            <a class="nav-link active" aria-current="page" href="carrito.html">
-                                <img src="img/carrito de compras.png" alt="Carrito de Compras" width="60" height="50" class="logito">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </nav>
-        </header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        <img src="img/logo act1.2 fullstak II.png" alt="Logotipo" width="120" height="96">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <main class="container py-5 mt-5">
-            <section class="my-5">
-                <h2 class="text-center mb-4">Tu Carrito de Compras</h2>
-                <div class="row justify-content-center">
-                    <div class="col-md-10">
-                        <div class="card p-4 shadow-sm">
-                            <div class="card-body">
-                                <div id="cart-items" class="list-group">
-                                    </div>
-                                <hr class="my-4">
-                                <p id="cart-total" class="h4 text-end"><strong>Total: $0 CLP</strong></p>
-                                <div class="d-grid gap-2 mt-4">
-                                    <button class="btn btn-primary" onclick="alert('Procediendo al pago...');">Pagar</button>
-                                    <button class="btn btn-danger" onclick="clearCart();">Vaciar Carrito</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </main>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="inicioSesion.html">Iniciar Sesión</a></li>
+          <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="categoriasDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Categorías
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="categoriasDropdown">
+              <li><a class="dropdown-item" href="ropa.html">Ropa</a></li>
+              <li><a class="dropdown-item" href="juguetes.html">Juguetes</a></li>
+              <li><a class="dropdown-item" href="tecnologia.html">Tecnología</a></li>
+            </ul>
+          </li>
 
-        <footer class="bg-dark text-white text-center py-3 mt-5">
-            <p>&copy; 2024 Lo quieres, te lo vendo. Todos los derechos reservados.</p>
-        </footer>
+          <li class="nav-item"><a class="nav-link" href="Blogs.html">Blog</a></li>
+          <li class="nav-item"><a class="nav-link" href="Nosotros.html">Nosotros</a></li>
+          <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+          <li class="nav-item">
+            <a class="nav-link active" href="carrito.html">
+              <i class="bi bi-cart-fill"></i> Carrito
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="carrito-compra.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', updateCartDisplay);
-    </script>
+  </nav>
+  <main class="container py-5 mt-5">
+    <section class="my-5">
+      <h2 class="text-center mb-4">Tu Carrito de Compras</h2>
+      <div class="row justify-content-center">
+        <div class="col-md-10">
+          <div class="card p-4 shadow-sm">
+            <div class="card-body">
+              <div id="cart-items" class="list-group">
+              </div>
+              <hr class="my-4">
+              <p id="cart-total" class="h4 text-end"><strong>Total: $0 CLP</strong></p>
+              <div class="d-grid gap-2 mt-4">
+                <button class="btn btn-primary" onclick="alert('Procediendo al pago...');">Pagar</button>
+                <button class="btn btn-danger" onclick="clearCart();">Vaciar Carrito</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="bg-dark text-white text-center py-3 mt-5">
+    <p class="mb-0">&copy; 2025 Lo quieres, te lo vendo. Todos los derechos reservados.</p>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="carrito-compra.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', updateCartDisplay);
+  </script>
 </body>
 </html>
