--- a/juguetes.html
+++ b/juguetes.html
@@ -1,92 +1,135 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juguetes - Lo quieres, te lo vendo</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Juguetes - Lo quieres, te lo vendo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container-fluid">
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-                <div class="container">
-                    <a class="navbar-brand" href="index.html">
-                        <img src="img/logo act1.2 fullstak II.png" alt="Logotipo" width="120" height="96">
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav ms-auto">
-                            <a class="nav-link" href="index.html">Inicio</a>
-                            <a class="nav-link" href="productos.html">Productos</a>
-                            <a class="nav-link" href="contacto.html">Contacto</a>
-                            <a class="nav-link active" aria-current="page" href="juguetes.html">Juguetes</a>
-                            <a class="nav-link" href="ropa.html">Ropa</a>
-                            <a class="nav-link" href="carrito.html">
-                                <img src="img/carrito de compras.png" alt="Carrito de Compras" width="60" height="50" class="logito">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </nav>
-        </header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        <img src="img/logo act1.2 fullstak II.png" alt="Logotipo" width="120" height="96">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <main class="container py-5 mt-5">
-            <section class="my-5">
-                <h2 class="text-center mb-4">Juguetes</h2>
-                <div class="row row-cols-1 row-cols-md-3 g-4">
-                    <div class="col">
-                        <div class="card h-100 shadow-sm" data-name="FIGURA DE PEACEMAKER" data-price="29990">
-                            <img src="img/producto6.jpg" class="card-img-top p-3" alt="Figura de Peacemaker">
-                            <div class="card-body text-center">
-                                <h5 class="card-title">FIGURA DE PEACEMAKER</h5>
-                                <p class="card-text">Figura de Peacemaker con sus accesorios.</p>
-                                <p class="card-price"><strong>Precio: $29.990 CLP</strong></p>
-                                <button class="btn btn-primary mt-3 add-to-cart">Comprar</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card h-100 shadow-sm" data-name="FIGURA DE SON GOKU" data-price="25000">
-                            <img src="img/goku.jpg" class="card-img-top p-3" alt="Figura de Son Goku">
-                            <div class="card-body text-center">
-                                <h5 class="card-title">FIGURA DE SON GOKU</h5>
-                                <p class="card-text">Figura de Son Goku Super Saiyan 3.</p>
-                                <p class="card-price"><strong>Precio: $25.000 CLP</strong></p>
-                                <button class="btn btn-primary mt-3 add-to-cart">Comprar</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card h-100 shadow-sm" data-name="FUNKO POPS DE SQUIRTLE" data-price="15000">
-                            <img src="img/squirtle.jpg" class="card-img-top p-3" alt="Funko Pops de Squirtle">
-                            <div class="card-body text-center">
-                                <h5 class="card-title">FUNKO POPS DE SQUIRTLE</h5>
-                                <p class="card-text">Figura Funko Pops de Squirtle.</p>
-                                <p class="card-price"><strong>Precio: $15.000 CLP</strong></p>
-                                <button class="btn btn-primary mt-3 add-to-cart">Comprar</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </main>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="inicioSesion.html">Iniciar Sesión</a></li>
+          <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle active" href="#" id="categoriasDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Categorías
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="categoriasDropdown">
+              <li><a class="dropdown-item" href="ropa.html">Ropa</a></li>
+              <li><a class="dropdown-item active" href="juguetes.html">Juguetes</a></li>
+              <li><a class="dropdown-item" href="tecnologia.html">Tecnología</a></li>
+            </ul>
+          </li>
 
-        <footer class="bg-dark text-white text-center py-3 mt-5">
-            <p>&copy; 2024 Lo quieres, te lo vendo. Todos los derechos reservados.</p>
-        </footer>
+          <li class="nav-item"><a class="nav-link" href="Blogs.html">Blog</a></li>
+          <li class="nav-item"><a class="nav-link" href="Nosotros.html">Nosotros</a></li>
+          <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="carrito.html">
+              <i class="bi bi-cart-fill"></i> Carrito
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
+  </nav>
+  <main class="container py-5 mt-5">
+    <section class="my-5">
+      <h2 class="text-center mb-4">Juguetes</h2>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100 shadow-sm">
+            <img src="img/juguete1.jpg" class="card-img-top p-3" alt="Funko Pop Squirtle">
+            <div class="card-body text-center">
+              <span class="badge bg-secondary mb-2">Juguetes</span>
+              <h5 class="card-title">Funko Pop Squirtle</h5>
+              <p class="card-price"><strong>Precio: $12.990 CLP</strong></p>
+              <button class="btn btn-primary mt-3">Comprar</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow-sm">
+            <img src="img/juguete2.jpg" class="card-img-top p-3" alt="Lego Star Wars">
+            <div class="card-body text-center">
+              <span class="badge bg-secondary mb-2">Juguetes</span>
+              <h5 class="card-title">Lego Star Wars</h5>
+              <p class="card-price"><strong>Precio: $59.990 CLP</strong></p>
+              <button class="btn btn-primary mt-3">Comprar</button>
+            </div>
+          </div>
+        </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="carrito-compra.js"></script>
+        <div class="col">
+          <div class="card h-100 shadow-sm">
+            <img src="img/juguete3.jpg" class="card-img-top p-3" alt="Muñeca Barbie">
+            <div class="card-body text-center">
+              <span class="badge bg-secondary mb-2">Juguetes</span>
+              <h5 class="card-title">Figura De Peacemaker</h5>
+              <p class="card-price"><strong>Precio: $14.990 CLP</strong></p>
+              <button class="btn btn-primary mt-3">Comprar</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow-sm">
+            <img src="img/juguete4.jpg" class="card-img-top p-3" alt="Auto a Control Remoto">
+            <div class="card-body text-center">
+              <span class="badge bg-secondary mb-2">Juguetes</span>
+              <h5 class="card-title">Figura de Son Goku</h5>
+              <p class="card-price"><strong>Precio: $22.990 CLP</strong></p>
+              <button class="btn btn-primary mt-3">Comprar</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card h-100 shadow-sm">
+            <img src="img/juguete5.jpg" class="card-img-top p-3" alt="Puzzle 1000 piezas">
+            <div class="card-body text-center">
+              <span class="badge bg-secondary mb-2">Juguetes</span>
+              <h5 class="card-title">Puzzle 1000 piezas</h5>
+              <p class="card-price"><strong>Precio: $9.990 CLP</strong></p>
+              <button class="btn btn-primary mt-3">Comprar</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow-sm">
+            <img src="img/juguete6.jpg" class="card-img-top p-3" alt="Pelota de Fútbol">
+            <div class="card-body text-center">
+              <span class="badge bg-secondary mb-2">Juguetes</span>
+              <h5 class="card-title">Risk</h5>
+              <p class="card-price"><strong>Precio: $7.990 CLP</strong></p>
+              <button class="btn btn-primary mt-3">Comprar</button>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+  </main>
+
+  <footer class="bg-dark text-white text-center py-3 mt-5">
+    <p class="mb-0">&copy; 2025 Lo quieres, te lo vendo. Todos los derechos reservados.</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
