--- a/tecnologia.html
+++ b/tecnologia.html
@@ -1,98 +1,131 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Producto</title> 
-
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <script src="carrito-compra.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tecnología - Lo quieres, te lo vendo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
-    <div class="container-fluid">
-    <body>
-        <figure class="text-center">
-            <blockquote class="blockquote">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"><img src="img/logo act1.2 fullstak II.png" alt="" width="120" height="96" class="logo-pequeño"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                    <a class="nav-link" href="productos.html">Productos</a>
-                    <a class="nav-link" href="contacto.html">Contacto</a>
-                    <a class="nav-link" href="carrito.html"><img src="img/carrito de compras.png" alt="carrito" width="60" height="50" class="logito" ></a>
-                </div>
-                </div>
-            </div>
-        </nav>  
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        <img src="img/logo act1.2 fullstak II.png" alt="Logotipo" width="120" height="96">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <main class="contenido">
-            <section class="shopping-cart">
-                <h2 style="font-size: 40px; line-height: 1.2; color: black;">
-                    nuestros productos
-                </h2>
-                <p style="font-size: 20px; line-height: 1.6; color: black;">
-                    aqui podras ver y comprar <strong>TODOS</strong> nuestros productos a precios irrersistibles.
-                </p>
-                <div class="shopping-Cart-items shoppingCartItemsContainer row row-cols-1 row-cols-md-3 row-cols-lg-4 g-4">
-                    <div class="col">
-                        <div class="card h-100" data-name="NOTEBOOK GAMER" data-price="1200000">
-                            <img src="img/producto1.jpg" class="card-img-top" alt="Producto 1" style="height: 200px; object-fit: contain;">
-                            <div class="card-body">
-                                <h5 class="card-title">NOTEBOOK GAMER</h5>
-                                <p class="card-text">Notebook gamer con procesador Intel Core i7, 16GB de RAM y tarjeta gráfica NVIDIA GeForce RTX 4060.</p>
-                                <p class="card-price"><strong>Precio: $1.200.000 CLP</strong></p>
-                                
-                            </div>
-                            <small>
-                                <button class="btn btn-secondary add-to-cart">Comprar</button>
-                            </small>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card h-100" data-name="NINTENDO SWITCH" data-price="350000">
-                            <img src="img/producto 2.jpg" class="card-img-top" alt="Producto 2" style="height: 200px; object-fit: contain;">
-                            <div class="card-body">
-                                <h5 class="card-title">NINTENDO SWITCH</h5>
-                                <p class="card-text">Consola Nintendo Switch con controles Joy-Con desmontables.</p>
-                                <p class="card-price"><strong>Precio: $350.000 CLP</strong></p>
-                            </div>
-                            <small>
-                                <button class="btn btn-secondary add-to-cart">Comprar</button>
-                            </small>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card h-100" data-name="PLAYSTATION 5" data-price="589990">
-                        <img src="img/producto8.png" class="card-img-top" alt="producto8" style="height: 200px; object-fit: contain;">
-                        <div class="card-body">
-                            <h5 class="card-title">PLAYSTATION 5 DIGITAL</h5>
-                            <p class="card-text">Playstatio 5 Digital con mando y stand para posicion vertical</p>
-                            <p class="card-price"><strong>Precio: $589.990 CLP</strong></p>
-                        </div>
-                        <small>
-                            <button class="btn btn-secondary add-to-cart">Comprar</button>
-                        </small>
-                        </div>
-                    </div>
-            </blockquote>
-            </section>
-        </figure>
-        </main>
-        <script> 
-        document.addEventListener('DOMContentLoaded', function() { 
-            const buttons = document.querySelectorAll('.add-to-cart'); 
-            buttons.forEach(button => { 
-                button.addEventListener('click', function() { 
-                    const card = this.closest('.card'); 
-                    const name = card.getAttribute('data-name'); 
-                    const price = card.getAttribute('data-price'); 
-                    addToCart(name, price); }); }); }); 
-        </script> 
-    </body>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="inicioSesion.html">Iniciar Sesión</a></li>
+          <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle active" href="#" id="categoriasDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Categorías
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="categoriasDropdown">
+              <li><a class="dropdown-item" href="ropa.html">Ropa</a></li>
+              <li><a class="dropdown-item" href="juguetes.html">Juguetes</a></li>
+              <li><a class="dropdown-item active" href="tecnologia.html">Tecnología</a></li>
+            </ul>
+          </li>
+
+          <li class="nav-item"><a class="nav-link" href="Blogs.html">Blog</a></li>
+          <li class="nav-item"><a class="nav-link" href="Nosotros.html">Nosotros</a></li>
+          <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="carrito.html">
+              <i class="bi bi-cart-fill"></i> Carrito
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
+  </nav>
+  <main class="container py-5 mt-5">
+    <section class="my-5">
+      <h2 class="text-center mb-4">Tecnología</h2>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100 shadow-sm">
+            <img src="img/producto8.png" class="card-img-top p-3" alt="PlayStation 5 Digital">
+            <div class="card-body text-center">
+              <span class="badge bg-secondary mb-2">Consola</span>
+              <h5 class="card-title">PlayStation 5 Digital</h5>
+              <p class="card-price"><strong>Precio: $589.990 CLP</strong></p>
+              <button class="btn btn-primary mt-3">Comprar</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow-sm">
+            <img src="img/producto5.jpg" class="card-img-top p-3" alt="Xbox Series X">
+            <div class="card-body text-center">
+              <span class="badge bg-secondary mb-2">Consola</span>
+              <h5 class="card-title">Xbox Series X</h5>
+              <p class="card-price"><strong>Precio: $550.000 CLP</strong></p>
+              <button class="btn btn-primary mt-3">Comprar</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow-sm">
+            <img src="img/switch.jpg" class="card-img-top p-3" alt="Nintendo Switch">
+            <div class="card-body text-center">
+              <span class="badge bg-secondary mb-2">Consola</span>
+              <h5 class="card-title">Nintendo Switch</h5>
+              <p class="card-price"><strong>Precio: $299.990 CLP</strong></p>
+              <button class="btn btn-primary mt-3">Comprar</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow-sm">
+            <img src="img/producto2.jpg" class="card-img-top p-3" alt="Teclado Gamer">
+            <div class="card-body text-center">
+              <span class="badge bg-secondary mb-2">Accesorio</span>
+              <h5 class="card-title">Teclado Mecánico Gamer</h5>
+              <p class="card-price"><strong>Precio: $35.000 CLP</strong></p>
+              <button class="btn btn-primary mt-3">Comprar</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow-sm">
+            <img src="img/producto4.jpg" class="card-img-top p-3" alt="Mouse Gamer">
+            <div class="card-body text-center">
+              <span class="badge bg-secondary mb-2">Accesorio</span>
+              <h5 class="card-title">Mouse Gamer RGB</h5>
+              <p class="card-price"><strong>Precio: $15.000 CLP</strong></p>
+              <button class="btn btn-primary mt-3">Comprar</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow-sm">
+            <img src="img/dualSense.jpg" class="card-img-top p-3" alt="Control DualSense PS5">
+            <div class="card-body text-center">
+              <span class="badge bg-secondary mb-2">Accesorio</span>
+              <h5 class="card-title">Control DualSense PS5</h5>
+              <p class="card-price"><strong>Precio: $69.990 CLP</strong></p>
+              <button class="btn btn-primary mt-3">Comprar</button>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+  </main>
+  <footer class="bg-dark text-white text-center py-3 mt-5">
+    <p class="mb-0">&copy; 2025 Lo quieres, te lo vendo. Todos los derechos reservados.</p>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
