Integración de vista de inicio de sesión con validación y redirección
- Vista inicioSesion.html actualizada con estructura responsive, navbar y formulario con id="form-login".
- Validación de credenciales simuladas en admin.js usando localStorage.
- Redirección automática a Admin.html si el usuario tiene rol "admin", o a index.html si es "cliente".

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4 text-center">
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/Electronica.png" class="card-img-top p-3" alt="Electrónica">
+            <img src="img/logotecnologia.jpg" class="card-img-top p-3" alt="Electrónica">
             <div class="card-body">
               <h5 class="card-title">Electrónica</h5>
               <p class="card-text">La última tecnología al mejor precio.</p>
@@ -77,7 +77,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/Ropa.png" class="card-img-top p-3" alt="Ropa">
+            <img src="img/ropacate.jpg" class="card-img-top p-3" alt="Ropa">
             <div class="card-body">
               <h5 class="card-title">Ropa</h5>
               <p class="card-text">Lo último en moda a los precios más accesibles.</p>
@@ -87,7 +87,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/Juguetes.png" class="card-img-top p-3" alt="Juguetes">
+            <img src="img/logojuguetes.jpg" class="card-img-top p-3" alt="Juguetes">
             <div class="card-body">
               <h5 class="card-title">Juguetes</h5>
               <p class="card-text">Los mejores juguetes para los más pequeños.</p>
