--- a/juguetes.html
+++ b/juguetes.html
@@ -55,7 +55,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/juguete1.jpg" class="card-img-top p-3" alt="Funko Pop Squirtle">
+            <img src="img/Funkopop.jpg" class="card-img-top p-3" alt="Funko Pop Squirtle">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Juguetes</span>
               <h5 class="card-title">Funko Pop Squirtle</h5>
@@ -66,7 +66,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/juguete2.jpg" class="card-img-top p-3" alt="Lego Star Wars">
+            <img src="img/LegoStarwars.jpg" class="card-img-top p-3" alt="Lego Star Wars">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Juguetes</span>
               <h5 class="card-title">Lego Star Wars</h5>
@@ -78,7 +78,7 @@
 
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/juguete3.jpg" class="card-img-top p-3" alt="Muñeca Barbie">
+            <img src="img/producto6.jpg" class="card-img-top p-3" alt="Figura De Peacemaker">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Juguetes</span>
               <h5 class="card-title">Figura De Peacemaker</h5>
@@ -89,7 +89,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/juguete4.jpg" class="card-img-top p-3" alt="Auto a Control Remoto">
+            <img src="img/FiguraGoku.webp" class="card-img-top p-3" alt="figura de Son Goku">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Juguetes</span>
               <h5 class="card-title">Figura de Son Goku</h5>
@@ -101,7 +101,7 @@
 
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/juguete5.jpg" class="card-img-top p-3" alt="Puzzle 1000 piezas">
+            <img src="img/Puzzle.webp" class="card-img-top p-3" alt="Puzzle 1000 piezas">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Juguetes</span>
               <h5 class="card-title">Puzzle 1000 piezas</h5>
@@ -112,7 +112,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/juguete6.jpg" class="card-img-top p-3" alt="Pelota de Fútbol">
+            <img src="img/risk.webp" class="card-img-top p-3" alt="Risk">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Juguetes</span>
               <h5 class="card-title">Risk</h5>
