--- a/productos.html
+++ b/productos.html
@@ -60,7 +60,7 @@
 
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/producto1.jpg" class="card-img-top p-3" alt="Parlante JBL">
+            <img src="img/jblParlante.jpg" class="card-img-top p-3" alt="Parlante JBL">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Tecnología</span>
               <h5 class="card-title">Parlante JBL</h5>
@@ -71,7 +71,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/ropa1.jpg" class="card-img-top p-3" alt="Polerón Negro">
+            <img src="img/PoleronNegro.jpg" class="card-img-top p-3" alt="Polerón Negro">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Ropa</span>
               <h5 class="card-title">Polerón Negro</h5>
@@ -84,7 +84,7 @@
 
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/juguete1.jpg" class="card-img-top p-3" alt="Funko Pop Squirtle">
+            <img src="img/Funkopop.jpg" class="card-img-top p-3" alt="Funko Pop Squirtle">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Juguetes</span>
               <h5 class="card-title">Funko Pop Squirtle</h5>
@@ -97,7 +97,7 @@
 
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/switch.jpg" class="card-img-top p-3" alt="Nintendo Switch">
+            <img src="img/NintendoSwitch.jpg" class="card-img-top p-3" alt="Nintendo Switch">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Tecnología</span>
               <h5 class="card-title">Nintendo Switch</h5>
@@ -110,7 +110,7 @@
 
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/ropa2.jpg" class="card-img-top p-3" alt="Vestido Rojo">
+            <img src="img/VestidoRojo.jpg" class="card-img-top p-3" alt="Vestido Rojo">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Ropa</span>
               <h5 class="card-title">Vestido Rojo</h5>
@@ -123,7 +123,7 @@
 
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/producto8.png" class="card-img-top p-3" alt="PlayStation 5 Digital">
+            <img src="img/Ps5.jpg" class="card-img-top p-3" alt="PlayStation 5 Digital">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Tecnología</span>
               <h5 class="card-title">PlayStation 5 Digital</h5>
