--- a/ropa.html
+++ b/ropa.html
@@ -57,7 +57,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/ropa1.jpg" class="card-img-top p-3" alt="Polerón Negro">
+            <img src="img/PoleronNegro.jpg" class="card-img-top p-3" alt="Polerón Negro">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Ropa</span>
               <h5 class="card-title">Polerón Negro</h5>
@@ -68,7 +68,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/ropa2.jpg" class="card-img-top p-3" alt="Vestido Rojo">
+            <img src="img/VestidoRojo.jpg" class="card-img-top p-3" alt="Vestido Rojo">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Ropa</span>
               <h5 class="card-title">Vestido Rojo</h5>
@@ -79,7 +79,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/ropa3.jpg" class="card-img-top p-3" alt="Chaqueta de Cuero">
+            <img src="img/ChaquetaCuero.jpg" class="card-img-top p-3" alt="Chaqueta de Cuero">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Ropa</span>
               <h5 class="card-title">Chaqueta de Cuero</h5>
@@ -90,7 +90,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/ropa4.jpg" class="card-img-top p-3" alt="Camisa Blanca">
+            <img src="img/CamisaBlanca.jpg" class="card-img-top p-3" alt="Camisa Blanca">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Ropa</span>
               <h5 class="card-title">Camisa Blanca</h5>
@@ -101,7 +101,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/ropa5.jpg" class="card-img-top p-3" alt="Pantalón Jeans">
+            <img src="img/jeans.jpg" class="card-img-top p-3" alt="Pantalón Jeans">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Ropa</span>
               <h5 class="card-title">Pantalón Jeans</h5>
@@ -112,7 +112,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/ropa6.jpg" class="card-img-top p-3" alt="Zapatillas Urbanas">
+            <img src="img/Zapatillas.jpg" class="card-img-top p-3" alt="Zapatillas Urbanas">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Ropa</span>
               <h5 class="card-title">Zapatillas Urbanas</h5>
