--- a/tecnologia.html
+++ b/tecnologia.html
@@ -55,7 +55,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/producto8.png" class="card-img-top p-3" alt="PlayStation 5 Digital">
+            <img src="img/Ps5.jpg" class="card-img-top p-3" alt="PlayStation 5 Digital">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Consola</span>
               <h5 class="card-title">PlayStation 5 Digital</h5>
@@ -66,7 +66,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/producto5.jpg" class="card-img-top p-3" alt="Xbox Series X">
+            <img src="img/xboxsx.webp" class="card-img-top p-3" alt="Xbox Series X">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Consola</span>
               <h5 class="card-title">Xbox Series X</h5>
@@ -77,7 +77,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/switch.jpg" class="card-img-top p-3" alt="Nintendo Switch">
+            <img src="img/NintendoSwitch.jpg" class="card-img-top p-3" alt="Nintendo Switch">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Consola</span>
               <h5 class="card-title">Nintendo Switch</h5>
@@ -88,7 +88,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/producto2.jpg" class="card-img-top p-3" alt="Teclado Gamer">
+            <img src="img/teclado.webp" class="card-img-top p-3" alt="Teclado Gamer">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Accesorio</span>
               <h5 class="card-title">Teclado Mecánico Gamer</h5>
@@ -99,7 +99,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/producto4.jpg" class="card-img-top p-3" alt="Mouse Gamer">
+            <img src="img/mouse.webp" class="card-img-top p-3" alt="Mouse Gamer">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Accesorio</span>
               <h5 class="card-title">Mouse Gamer RGB</h5>
@@ -110,7 +110,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/dualSense.jpg" class="card-img-top p-3" alt="Control DualSense PS5">
+            <img src="img/controlps5.webp" class="card-img-top p-3" alt="Control DualSense PS5">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Accesorio</span>
               <h5 class="card-title">Control DualSense PS5</h5>
