--- a/Admin.html
+++ b/Admin.html
@@ -25,13 +25,13 @@
             <a href="admin.html" class="nav-link btn btn-primary text-start"><i class="bi bi-speedometer2 me-2"></i>Dashboard</a>
           </li>
           <li class="nav-item">
-            <a href="admin-productos.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-box-seam me-2"></i>Gestión de Productos</a>
+            <a href="AdminProductos.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-box-seam me-2"></i>Gestión de Productos</a>
           </li>
           <li class="nav-item">
-            <a href="admin-blogs.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-journal-text me-2"></i>Gestión de Blogs</a>
+            <a href="AdminBlog.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-journal-text me-2"></i>Gestión de Blogs</a>
           </li>
           <li class="nav-item">
-            <a href="admin-usuarios.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-people me-2"></i>Gestión de Usuarios</a>
+            <a href="AdminUser.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-people me-2"></i>Gestión de Usuarios</a>
           </li>
         </ul>
       </nav>
