--- a/AdminProductos.html
+++ b/AdminProductos.html
@@ -21,16 +21,16 @@
       <nav class="col-md-3 col-lg-2 bg-light p-3 border-end min-vh-100">
         <ul class="nav flex-column admin-nav">
           <li class="nav-item">
-            <a href="admin.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-speedometer2 me-2"></i>Dashboard</a>
+            <a href="Admin.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-speedometer2 me-2"></i>Dashboard</a>
           </li>
           <li class="nav-item">
-            <a href="admin-productos.html" class="nav-link btn btn-primary text-start"><i class="bi bi-box-seam me-2"></i>Gestión de Productos</a>
+            <a href="AdminProductos.html" class="nav-link btn btn-primary text-start"><i class="bi bi-box-seam me-2"></i>Gestión de Productos</a>
           </li>
           <li class="nav-item">
-            <a href="admin-blogs.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-journal-text me-2"></i>Gestión de Blogs</a>
+            <a href="AdminBlog.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-journal-text me-2"></i>Gestión de Blogs</a>
           </li>
           <li class="nav-item">
-            <a href="admin-usuarios.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-people me-2"></i>Gestión de Usuarios</a>
+            <a href="AdminUser.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-people me-2"></i>Gestión de Usuarios</a>
           </li>
         </ul>
       </nav>
