--- a/inicioSesion.html
+++ b/inicioSesion.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Iniciar Sesión - Lo quieres, te lo vendo</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="img/logo act1.2 fullstak II.png" alt="Logotipo" width="120" height="96">
+        <img src="img/logo act1.2 fullstak II.png" alt="Logotipo" width="120" height="96" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -48,23 +49,26 @@
       </div>
     </div>
   </nav>
+
   <main class="container py-5 mt-5">
     <section class="my-5">
       <h2 class="text-center mb-4">Iniciar Sesión</h2>
       <div class="row justify-content-center">
         <div class="col-md-6">
           <div class="card p-4 shadow-sm">
-            <form>
+            <form id="form-login">
               <div class="mb-3">
                 <label for="email" class="form-label">Correo electrónico</label>
-                <input type="email" class="form-control" id="email" placeholder="tuemail@ejemplo.com" required>
+                <input type="email" class="form-control" id="email" placeholder="tuemail@ejemplo.com" required />
               </div>
               <div class="mb-3">
                 <label for="password" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="password" placeholder="********" required>
+                <input type="password" class="form-control" id="password" placeholder="********" required />
               </div>
               <div class="d-grid">
-                <button type="submit" class="btn btn-primary">Ingresar</button>
+                <button type="submit" class="btn btn-primary">
+                  <i class="bi bi-box-arrow-in-right me-1"></i>Ingresar
+                </button>
               </div>
               <div class="mt-3 text-center">
                 <p>¿No tienes cuenta? <a href="registro.html">Regístrate aquí</a></p>
@@ -80,5 +84,8 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="admin.js"></script>
+  
 </body>
 </html>
+
