Integración de sistema de carrito con botones dinámicos en ropa, juguetes y tecnología
- Reemplazados botones de compra en ropa.html, juguetes.html y tecnologia.html por botones con clase `btn-agregar-carrito` y atributos `data-name` y `data-price` para compatibilidad con el nuevo sistema de carrito.
- Se eliminaron llamadas directas a `onclick` y se estandarizó el formato visual con ícono de carrito (`bi bi-cart-plus`) para coherencia en todas las categorías.
- Se agregó el script `carrito-compra.js` al final de cada archivo para habilitar la funcionalidad de agregar productos al carrito desde cualquier página.
- Se verificó que todos los nombres de productos sean únicos y que los precios estén correctamente formateados como enteros.
- Se mantuvo la estructura Bootstrap y estilos existentes sin alterar la visualización original de las tarjetas de producto.

--- a/Admin.html
+++ b/Admin.html
@@ -46,7 +46,7 @@
                 <i class="bi bi-box-seam display-4 text-primary"></i>
                 <h5 class="card-title mt-2">Productos</h5>
                 <p class="card-text fs-4 fw-bold">120</p>
-                <a href="admin-productos.html" class="btn btn-primary">Gestionar</a>
+                <a href="AdminProductos.html" class="btn btn-primary">Gestionar</a>
               </div>
             </div>
           </div>
@@ -56,7 +56,7 @@
                 <i class="bi bi-journal-text display-4 text-success"></i>
                 <h5 class="card-title mt-2">Blogs</h5>
                 <p class="card-text fs-4 fw-bold">25</p>
-                <a href="admin-blogs.html" class="btn btn-primary">Gestionar</a>
+                <a href="AdminBlog.html" class="btn btn-primary">Gestionar</a>
               </div>
             </div>
           </div>
@@ -66,7 +66,7 @@
                 <i class="bi bi-people display-4 text-warning"></i>
                 <h5 class="card-title mt-2">Usuarios</h5>
                 <p class="card-text fs-4 fw-bold">500</p>
-                <a href="admin-usuarios.html" class="btn btn-primary">Gestionar</a>
+                <a href="AdminUser.html" class="btn btn-primary">Gestionar</a>
               </div>
             </div>
           </div>
