--- a/AdminProductos.html
+++ b/AdminProductos.html
@@ -51,49 +51,19 @@
                 <th>Acciones</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td>001</td>
-                <td>Polerón Negro</td>
-                <td>Ropa</td>
-                <td>$19.990</td>
-                <td>15</td>
-                <td>
-                  <a href="#" class="btn btn-warning btn-sm"><i class="bi bi-pencil-square"></i></a>
-                  <a href="#" class="btn btn-danger btn-sm"><i class="bi bi-trash"></i></a>
-                </td>
-              </tr>
-              <tr>
-                <td>002</td>
-                <td>Funko Pop Squirtle</td>
-                <td>Juguetes</td>
-                <td>$12.990</td>
-                <td>30</td>
-                <td>
-                  <a href="#" class="btn btn-warning btn-sm"><i class="bi bi-pencil-square"></i></a>
-                  <a href="#" class="btn btn-danger btn-sm"><i class="bi bi-trash"></i></a>
-                </td>
-              </tr>
-              <tr>
-                <td>003</td>
-                <td>PlayStation 5 Digital</td>
-                <td>Tecnología</td>
-                <td>$589.990</td>
-                <td>5</td>
-                <td>
-                  <a href="#" class="btn btn-warning btn-sm"><i class="bi bi-pencil-square"></i></a>
-                  <a href="#" class="btn btn-danger btn-sm"><i class="bi bi-trash"></i></a>
-                </td>
-              </tr>
+            <tbody id="tabla-productos">
             </tbody>
           </table>
         </div>
       </main>
     </div>
   </div>
+
   <footer class="bg-dark text-white text-center py-3 mt-5">
     <p class="mb-0">&copy; 2025 Panel de Administración. Todos los derechos reservados.</p>
   </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="admin.js"></script>
 </body>
 </html>
