--- a/AdminUser.html
+++ b/AdminUser.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gestión de Usuarios - Panel de Administración</title>
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -21,23 +20,14 @@
     <div class="row">
       <nav class="col-md-3 col-lg-2 bg-light p-3 border-end min-vh-100">
         <ul class="nav flex-column admin-nav">
-          <li class="nav-item">
-            <a href="admin.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-speedometer2 me-2"></i>Dashboard</a>
-          </li>
-          <li class="nav-item">
-            <a href="admin-productos.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-box-seam me-2"></i>Gestión de Productos</a>
-          </li>
-          <li class="nav-item">
-            <a href="admin-blogs.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-journal-text me-2"></i>Gestión de Blogs</a>
-          </li>
-          <li class="nav-item">
-            <a href="admin-usuarios.html" class="nav-link btn btn-primary text-start"><i class="bi bi-people me-2"></i>Gestión de Usuarios</a>
-          </li>
+          <li class="nav-item"><a href="Admin.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-speedometer2 me-2"></i>Dashboard</a></li>
+          <li class="nav-item"><a href="AdminProductos.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-box-seam me-2"></i>Gestión de Productos</a></li>
+          <li class="nav-item"><a href="AdminBlog.html" class="nav-link btn btn-secondary text-start"><i class="bi bi-journal-text me-2"></i>Gestión de Blogs</a></li>
+          <li class="nav-item"><a href="AdminUser.html" class="nav-link btn btn-primary text-start"><i class="bi bi-people me-2"></i>Gestión de Usuarios</a></li>
         </ul>
       </nav>
       <main class="col-md-9 col-lg-10 p-4">
         <h2 class="mb-4">Lista de Usuarios</h2>
-
         <div class="mb-3">
           <a href="admin-usuarios-nuevo.html" class="btn btn-success"><i class="bi bi-plus-circle me-1"></i>Agregar Usuario</a>
         </div>
@@ -53,40 +43,7 @@
                 <th>Acciones</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td>001</td>
-                <td>Juan Pérez</td>
-                <td>juanperez@example.com</td>
-                <td>Administrador</td>
-                <td><span class="badge bg-success">Activo</span></td>
-                <td>
-                  <a href="#" class="btn btn-warning btn-sm"><i class="bi bi-pencil-square"></i></a>
-                  <a href="#" class="btn btn-danger btn-sm"><i class="bi bi-trash"></i></a>
-                </td>
-              </tr>
-              <tr>
-                <td>002</td>
-                <td>María López</td>
-                <td>marialopez@example.com</td>
-                <td>Cliente</td>
-                <td><span class="badge bg-secondary">Inactivo</span></td>
-                <td>
-                  <a href="#" class="btn btn-warning btn-sm"><i class="bi bi-pencil-square"></i></a>
-                  <a href="#" class="btn btn-danger btn-sm"><i class="bi bi-trash"></i></a>
-                </td>
-              </tr>
-              <tr>
-                <td>003</td>
-                <td>Carlos Díaz</td>
-                <td>carlosdiaz@example.com</td>
-                <td>Cliente</td>
-                <td><span class="badge bg-success">Activo</span></td>
-                <td>
-                  <a href="#" class="btn btn-warning btn-sm"><i class="bi bi-pencil-square"></i></a>
-                  <a href="#" class="btn btn-danger btn-sm"><i class="bi bi-trash"></i></a>
-                </td>
-              </tr>
+            <tbody id="tabla-usuarios">
             </tbody>
           </table>
         </div>
@@ -98,6 +55,6 @@
     <p class="mb-0">&copy; 2025 Panel de Administración. Todos los derechos reservados.</p>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="admin.js"></script>
 </body>
 </html>
