--- a/juguetes.html
+++ b/juguetes.html
@@ -6,9 +6,6 @@
   <title>Juguetes - Lo quieres, te lo vendo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -36,7 +33,6 @@
               <li><a class="dropdown-item" href="tecnologia.html">Tecnología</a></li>
             </ul>
           </li>
-
           <li class="nav-item"><a class="nav-link" href="Blogs.html">Blog</a></li>
           <li class="nav-item"><a class="nav-link" href="Nosotros.html">Nosotros</a></li>
           <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
@@ -49,10 +45,12 @@
       </div>
     </div>
   </nav>
+
   <main class="container py-5 mt-5">
     <section class="my-5">
       <h2 class="text-center mb-4">Juguetes</h2>
       <div class="row row-cols-1 row-cols-md-3 g-4">
+
         <div class="col">
           <div class="card h-100 shadow-sm">
             <img src="img/Funkopop.jpg" class="card-img-top p-3" alt="Funko Pop Squirtle">
@@ -60,10 +58,13 @@
               <span class="badge bg-secondary mb-2">Juguetes</span>
               <h5 class="card-title">Funko Pop Squirtle</h5>
               <p class="card-price"><strong>Precio: $12.990 CLP</strong></p>
-              <button class="btn btn-primary mt-3">Comprar</button>
+              <button class="btn btn-primary mt-3 btn-agregar-carrito" data-name="Funko Pop Squirtle" data-price="12990">
+                <i class="bi bi-cart-plus me-1"></i>Agregar al carrito
+              </button>
             </div>
           </div>
         </div>
+
         <div class="col">
           <div class="card h-100 shadow-sm">
             <img src="img/LegoStarwars.jpg" class="card-img-top p-3" alt="Lego Star Wars">
@@ -71,7 +72,9 @@
               <span class="badge bg-secondary mb-2">Juguetes</span>
               <h5 class="card-title">Lego Star Wars</h5>
               <p class="card-price"><strong>Precio: $59.990 CLP</strong></p>
-              <button class="btn btn-primary mt-3">Comprar</button>
+              <button class="btn btn-primary mt-3 btn-agregar-carrito" data-name="Lego Star Wars" data-price="59990">
+                <i class="bi bi-cart-plus me-1"></i>Agregar al carrito
+              </button>
             </div>
           </div>
         </div>
@@ -83,18 +86,23 @@
               <span class="badge bg-secondary mb-2">Juguetes</span>
               <h5 class="card-title">Figura De Peacemaker</h5>
               <p class="card-price"><strong>Precio: $14.990 CLP</strong></p>
-              <button class="btn btn-primary mt-3">Comprar</button>
+              <button class="btn btn-primary mt-3 btn-agregar-carrito" data-name="Figura De Peacemaker" data-price="14990">
+                <i class="bi bi-cart-plus me-1"></i>Agregar al carrito
+              </button>
             </div>
           </div>
         </div>
+
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <img src="img/FiguraGoku.webp" class="card-img-top p-3" alt="figura de Son Goku">
+            <img src="img/FiguraGoku.webp" class="card-img-top p-3" alt="Figura de Son Goku">
             <div class="card-body text-center">
               <span class="badge bg-secondary mb-2">Juguetes</span>
               <h5 class="card-title">Figura de Son Goku</h5>
               <p class="card-price"><strong>Precio: $22.990 CLP</strong></p>
-              <button class="btn btn-primary mt-3">Comprar</button>
+              <button class="btn btn-primary mt-3 btn-agregar-carrito" data-name="Figura de Son Goku" data-price="22990">
+                <i class="bi bi-cart-plus me-1"></i>Agregar al carrito
+              </button>
             </div>
           </div>
         </div>
@@ -106,10 +114,13 @@
               <span class="badge bg-secondary mb-2">Juguetes</span>
               <h5 class="card-title">Puzzle 1000 piezas</h5>
               <p class="card-price"><strong>Precio: $9.990 CLP</strong></p>
-              <button class="btn btn-primary mt-3">Comprar</button>
+              <button class="btn btn-primary mt-3 btn-agregar-carrito" data-name="Puzzle 1000 piezas" data-price="9990">
+                <i class="bi bi-cart-plus me-1"></i>Agregar al carrito
+              </button>
             </div>
           </div>
         </div>
+
         <div class="col">
           <div class="card h-100 shadow-sm">
             <img src="img/risk.webp" class="card-img-top p-3" alt="Risk">
@@ -117,7 +128,9 @@
               <span class="badge bg-secondary mb-2">Juguetes</span>
               <h5 class="card-title">Risk</h5>
               <p class="card-price"><strong>Precio: $7.990 CLP</strong></p>
-              <button class="btn btn-primary mt-3">Comprar</button>
+              <button class="btn btn-primary mt-3 btn-agregar-carrito" data-name="Risk" data-price="7990">
+                <i class="bi bi-cart-plus me-1"></i>Agregar al carrito
+              </button>
             </div>
           </div>
         </div>
@@ -131,5 +144,6 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="carrito-compra.js"></script>
 </body>
 </html>
