--- a/productos.html
+++ b/productos.html
@@ -26,9 +26,7 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
           <li class="nav-item"><a class="nav-link" href="inicioSesion.html">Iniciar Sesión</a></li>
-
           <li class="nav-item"><a class="nav-link active" href="productos.html">Productos</a></li>
-
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="categoriasDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Categorías
@@ -39,7 +37,6 @@
               <li><a class="dropdown-item" href="tecnologia.html">Tecnología</a></li>
             </ul>
           </li>
-
           <li class="nav-item"><a class="nav-link" href="Blogs.html">Blog</a></li>
           <li class="nav-item"><a class="nav-link" href="Nosotros.html">Nosotros</a></li>
           <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
@@ -65,10 +62,13 @@
               <span class="badge bg-secondary mb-2">Tecnología</span>
               <h5 class="card-title">Parlante JBL</h5>
               <p class="card-price"><strong>Precio: $45.000 CLP</strong></p>
-              <button class="btn btn-primary mt-3">Comprar</button>
+              <button class="btn btn-primary mt-3 btn-agregar-carrito" data-name="Parlante JBL" data-price="45000">
+                <i class="bi bi-cart-plus me-1"></i>Agregar al carrito
+              </button>
             </div>
           </div>
         </div>
+
         <div class="col">
           <div class="card h-100 shadow-sm">
             <img src="img/PoleronNegro.jpg" class="card-img-top p-3" alt="Polerón Negro">
@@ -76,11 +76,12 @@
               <span class="badge bg-secondary mb-2">Ropa</span>
               <h5 class="card-title">Polerón Negro</h5>
               <p class="card-price"><strong>Precio: $19.990 CLP</strong></p>
-              <button class="btn btn-primary mt-3">Comprar</button>
+              <button class="btn btn-primary mt-3 btn-agregar-carrito" data-name="Polerón Negro" data-price="19990">
+                <i class="bi bi-cart-plus me-1"></i>Agregar al carrito
+              </button>
             </div>
           </div>
         </div>
-
 
         <div class="col">
           <div class="card h-100 shadow-sm">
@@ -89,11 +90,12 @@
               <span class="badge bg-secondary mb-2">Juguetes</span>
               <h5 class="card-title">Funko Pop Squirtle</h5>
               <p class="card-price"><strong>Precio: $12.990 CLP</strong></p>
-              <button class="btn btn-primary mt-3">Comprar</button>
+              <button class="btn btn-primary mt-3 btn-agregar-carrito" data-name="Funko Pop Squirtle" data-price="12990">
+                <i class="bi bi-cart-plus me-1"></i>Agregar al carrito
+              </button>
             </div>
           </div>
         </div>
-
 
         <div class="col">
           <div class="card h-100 shadow-sm">
@@ -102,11 +104,12 @@
               <span class="badge bg-secondary mb-2">Tecnología</span>
               <h5 class="card-title">Nintendo Switch</h5>
               <p class="card-price"><strong>Precio: $299.990 CLP</strong></p>
-              <button class="btn btn-primary mt-3">Comprar</button>
+              <button class="btn btn-primary mt-3 btn-agregar-carrito" data-name="Nintendo Switch" data-price="299990">
+                <i class="bi bi-cart-plus me-1"></i>Agregar al carrito
+              </button>
             </div>
           </div>
         </div>
-
 
         <div class="col">
           <div class="card h-100 shadow-sm">
@@ -115,11 +118,12 @@
               <span class="badge bg-secondary mb-2">Ropa</span>
               <h5 class="card-title">Vestido Rojo</h5>
               <p class="card-price"><strong>Precio: $24.990 CLP</strong></p>
-              <button class="btn btn-primary mt-3">Comprar</button>
+              <button class="btn btn-primary mt-3 btn-agregar-carrito" data-name="Vestido Rojo" data-price="24990">
+                <i class="bi bi-cart-plus me-1"></i>Agregar al carrito
+              </button>
             </div>
           </div>
         </div>
-
 
         <div class="col">
           <div class="card h-100 shadow-sm">
@@ -128,7 +132,9 @@
               <span class="badge bg-secondary mb-2">Tecnología</span>
               <h5 class="card-title">PlayStation 5 Digital</h5>
               <p class="card-price"><strong>Precio: $589.990 CLP</strong></p>
-              <button class="btn btn-primary mt-3">Comprar</button>
+              <button class="btn btn-primary mt-3 btn-agregar-carrito" data-name="PlayStation 5 Digital" data-price="589990">
+                <i class="bi bi-cart-plus me-1"></i>Agregar al carrito
+              </button>
             </div>
           </div>
         </div>
@@ -137,12 +143,12 @@
     </section>
   </main>
 
-
   <footer class="bg-dark text-white text-center py-3 mt-5">
     <p class="mb-0">&copy; 2025 Lo quieres, te lo vendo. Todos los derechos reservados.</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="carrito-compra.js"></script>
 </body>
 </html>
 
