--- a/tecnologia.html
+++ b/tecnologia.html
@@ -6,9 +6,6 @@
   <title>Tecnología - Lo quieres, te lo vendo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -36,7 +33,6 @@
               <li><a class="dropdown-item active" href="tecnologia.html">Tecnología</a></li>
             </ul>
           </li>
-
           <li class="nav-item"><a class="nav-link" href="Blogs.html">Blog</a></li>
           <li class="nav-item"><a class="nav-link" href="Nosotros.html">Nosotros</a></li>
           <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
@@ -49,10 +45,12 @@
       </div>
     </div>
   </nav>
+
   <main class="container py-5 mt-5">
     <section class="my-5">
       <h2 class="text-center mb-4">Tecnología</h2>
       <div class="row row-cols-1 row-cols-md-3 g-4">
+
         <div class="col">
           <div class="card h-100 shadow-sm">
             <img src="img/Ps5.jpg" class="card-img-top p-3" alt="PlayStation 5 Digital">
@@ -60,10 +58,13 @@
               <span class="badge bg-secondary mb-2">Consola</span>
               <h5 class="card-title">PlayStation 5 Digital</h5>
               <p class="card-price"><strong>Precio: $589.990 CLP</strong></p>
-              <button class="btn btn-primary mt-3">Comprar</button>
+              <button class="btn btn-primary mt-3 btn-agregar-carrito" data-name="PlayStation 5 Digital" data-price="589990">
+                <i class="bi bi-cart-plus me-1"></i>Agregar al carrito
+              </button>
             </div>
           </div>
         </div>
+
         <div class="col">
           <div class="card h-100 shadow-sm">
             <img src="img/xboxsx.webp" class="card-img-top p-3" alt="Xbox Series X">
@@ -71,10 +72,13 @@
               <span class="badge bg-secondary mb-2">Consola</span>
               <h5 class="card-title">Xbox Series X</h5>
               <p class="card-price"><strong>Precio: $550.000 CLP</strong></p>
-              <button class="btn btn-primary mt-3">Comprar</button>
+              <button class="btn btn-primary mt-3 btn-agregar-carrito" data-name="Xbox Series X" data-price="550000">
+                <i class="bi bi-cart-plus me-1"></i>Agregar al carrito
+              </button>
             </div>
           </div>
         </div>
+
         <div class="col">
           <div class="card h-100 shadow-sm">
             <img src="img/NintendoSwitch.jpg" class="card-img-top p-3" alt="Nintendo Switch">
@@ -82,10 +86,13 @@
               <span class="badge bg-secondary mb-2">Consola</span>
               <h5 class="card-title">Nintendo Switch</h5>
               <p class="card-price"><strong>Precio: $299.990 CLP</strong></p>
-              <button class="btn btn-primary mt-3">Comprar</button>
+              <button class="btn btn-primary mt-3 btn-agregar-carrito" data-name="Nintendo Switch" data-price="299990">
+                <i class="bi bi-cart-plus me-1"></i>Agregar al carrito
+              </button>
             </div>
           </div>
         </div>
+
         <div class="col">
           <div class="card h-100 shadow-sm">
             <img src="img/teclado.webp" class="card-img-top p-3" alt="Teclado Gamer">
@@ -93,10 +100,13 @@
               <span class="badge bg-secondary mb-2">Accesorio</span>
               <h5 class="card-title">Teclado Mecánico Gamer</h5>
               <p class="card-price"><strong>Precio: $35.000 CLP</strong></p>
-              <button class="btn btn-primary mt-3">Comprar</button>
+              <button class="btn btn-primary mt-3 btn-agregar-carrito" data-name="Teclado Mecánico Gamer" data-price="35000">
+                <i class="bi bi-cart-plus me-1"></i>Agregar al carrito
+              </button>
             </div>
           </div>
         </div>
+
         <div class="col">
           <div class="card h-100 shadow-sm">
             <img src="img/mouse.webp" class="card-img-top p-3" alt="Mouse Gamer">
@@ -104,10 +114,13 @@
               <span class="badge bg-secondary mb-2">Accesorio</span>
               <h5 class="card-title">Mouse Gamer RGB</h5>
               <p class="card-price"><strong>Precio: $15.000 CLP</strong></p>
-              <button class="btn btn-primary mt-3">Comprar</button>
+              <button class="btn btn-primary mt-3 btn-agregar-carrito" data-name="Mouse Gamer RGB" data-price="15000">
+                <i class="bi bi-cart-plus me-1"></i>Agregar al carrito
+              </button>
             </div>
           </div>
         </div>
+
         <div class="col">
           <div class="card h-100 shadow-sm">
             <img src="img/controlps5.webp" class="card-img-top p-3" alt="Control DualSense PS5">
@@ -115,7 +128,9 @@
               <span class="badge bg-secondary mb-2">Accesorio</span>
               <h5 class="card-title">Control DualSense PS5</h5>
               <p class="card-price"><strong>Precio: $69.990 CLP</strong></p>
-              <button class="btn btn-primary mt-3">Comprar</button>
+              <button class="btn btn-primary mt-3 btn-agregar-carrito" data-name="Control DualSense PS5" data-price="69990">
+                <i class="bi bi-cart-plus me-1"></i>Agregar al carrito
+              </button>
             </div>
           </div>
         </div>
@@ -123,9 +138,12 @@
       </div>
     </section>
   </main>
+
   <footer class="bg-dark text-white text-center py-3 mt-5">
     <p class="mb-0">&copy; 2025 Lo quieres, te lo vendo. Todos los derechos reservados.</p>
   </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="carrito-compra.js"></script>
 </body>
 </html>
